--- a/Angular/src/app/components/banner/banner.component.html
+++ b/Angular/src/app/components/banner/banner.component.html
@@ -32,7 +32,7 @@
           class="btn"
           (click)="link(movie)"
           ><img
-            src="../../../assets/assets/images/play_circle.png"
+            src="assets/images/play_circle.png"
             height="24"
             width="24"
             alt="play circle"
