--- a/Angular/src/app/components/header/header.component.html
+++ b/Angular/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
   <a href="./index.html" class="logo">
     <!--  logox2.svg - logo.svg - logox.png  -->
     <img
-      src="../../../assets/assets/images/logox2.svg"
+      src="assets/images/logox2.svg"
       width="210px"
       height="37px"
       alt="Tvflix home"
@@ -30,7 +30,7 @@
         search-field
       />
       <img
-        src="../../../assets/assets/images/search.png"
+        src="assets/images/search.png"
         class="leading-icon"
         width="24"
         height="24"
@@ -39,7 +39,7 @@
     </div>
     <button class="search-btn" search-toggler (click)="toggle()">
       <img
-        src="../../../assets/assets/images/close.png"
+        src="assets/images/close.png"
         alt="close search box"
         width="24"
         height="24"
@@ -49,7 +49,7 @@
 
   <div class="search-btn" search-toggler menu-close (click)="toggle()">
     <img
-      src="../../../assets/assets/images/search.png"
+      src="assets/images/search.png"
       alt="open search box"
       width="24"
       height="24"
@@ -64,14 +64,14 @@
     menu-toggler
   >
     <img
-      src="../../../assets/assets/images/menu.png"
+      src="assets/images/menu.png"
       alt="open menu"
       class="menu"
       width="24"
       height="24"
     />
     <img
-      src="../../../assets/assets/images/menu-close.png"
+      src="assets/images/menu-close.png"
       alt="close menu"
       class="close"
       width="24"
