--- a/Angular/src/app/components/home-sidebar/home-sidebar.component.html
+++ b/Angular/src/app/components/home-sidebar/home-sidebar.component.html
@@ -32,7 +32,7 @@
       </p>
 
       <img
-        src="../../../assets/assets/images/tmdb-logo.svg"
+        src="assets/images/tmdb-logo.svg"
         alt="the movie database logo"
       />
     </div>
