--- a/Angular/src/app/components/movie-list/movie-list.component.html
+++ b/Angular/src/app/components/movie-list/movie-list.component.html
@@ -25,7 +25,7 @@
         <div class="meta-list">
           <div class="meta-item">
             <img
-              src="../../../assets/assets/images/star.png"
+              src="assets/images/star.png"
               loading="lazy"
               alt="rating"
             />
