--- a/Angular/src/app/pages/detail/detail.component.html
+++ b/Angular/src/app/pages/detail/detail.component.html
@@ -48,7 +48,7 @@
           <div class="meta-list">
             <div class="meta-item">
               <img
-                src="../../../assets/assets/images/star.png"
+                src="assets/images/star.png"
                 alt="rating"
                 height="20"
                 width="20"
