--- a/Angular/src/app/pages/login/login.component.html
+++ b/Angular/src/app/pages/login/login.component.html
@@ -3,7 +3,7 @@
   <div class="login-container">
     <mat-card class="card">
       <div class="container text-center">
-        <img src="../../../assets/registro.png" width="100" height="100" />
+        <img src="assets/registro.png" width="100" height="100" />
       </div>
       <p class="text-center">Crea tu cuenta</p>
       <form (ngSubmit)="formSubmit()">
