--- a/Angular/src/app/pages/signin/signin.component.html
+++ b/Angular/src/app/pages/signin/signin.component.html
@@ -4,7 +4,7 @@
     <mat-card class="card">
       <div class="container text-center">
         <img
-          src="../../../assets/iniciar-sesion2.png"
+          src="assets/iniciar-sesion2.png"
           width="100"
           height="100"
         />
